SOM-728-Update SOM_InvoiceTriggerHandler.cls

--- a/unpackaged/main/default/classes/SOM_InvoiceTriggerHandler.cls
+++ b/unpackaged/main/default/classes/SOM_InvoiceTriggerHandler.cls
@@ -1,5 +1,4 @@
 public class SOM_InvoiceTriggerHandler extends BaseTriggerHandler {
-
     private List<Invoice> newList;
     private List<Invoice> oldList;
 
@@ -9,6 +8,14 @@ public class SOM_InvoiceTriggerHandler extends BaseTriggerHandler {
     }
     
     protected override void beforeUpdate(){
-             SOM_InvoiceHelper.updateInvoiceTimezoneDate(newList);
+        List<Invoice> newListWithEmptyDate = new List<Invoice>();
+        for(Invoice singleInv : newList){
+            if(singleInv.Invoice_Timezone_Date__c == null){
+                newListWithEmptyDate.add(singleInv);
+            }
+        } 
+        if(newListWithEmptyDate != null && !newListWithEmptyDate.isEmpty()){
+            SOM_InvoiceHelper.updateInvoiceTimezoneDate(newListWithEmptyDate);
+        }
     }
 }
