--- a/unpackaged/main/default/classes/AccountTriggerHandler.cls
+++ b/unpackaged/main/default/classes/AccountTriggerHandler.cls
@@ -23,11 +23,7 @@ public class AccountTriggerHandler implements ITriggerHandler {
         //return TriggerSettings__c.AccountTriggerDisabled__c ?true : TriggerDisabled;
         return TriggerDisabled;
   	}
-	
-    public Boolean isDisabledForB2CConnector(){
-        return BypassTrigger.checkBypassClass(AccountTriggerHandler.class.getName());
-    }
-    
+
   	public void BeforeInsert(List<SObject> newItems) {
     }
 
@@ -37,15 +33,13 @@ public class AccountTriggerHandler implements ITriggerHandler {
 
   	public void AfterInsert(Map<Id, SObject> newItems) {
             System.debug('**** TRIGGER CONTEXT : START AFTER INSERT ****');
-            //TNP_001_AccountTrigger_SVE.listAccountAfterInsert(newItems.values());
-        	if(!isDisabledForB2CConnector()) AccountConsent_SVE.createB2CCustomInputForRetail(newItems, new Map<Id, SObject>());
+            TNP_001_AccountTrigger_SVE.listAccountAfterInsert(newItems.values());
             System.debug('**** TRIGGER CONTEXT : END AFTER INSERT ****'); 
     }
 
   	public void AfterUpdate(Map<Id, SObject> newItems, Map<Id, SObject> oldItems) {
         System.debug('**** TRIGGER CONTEXT : START AFTER UPDATE ****');
-        //TNP_001_AccountTrigger_SVE.listAccountAfterUpdate(newItems.values());
-        if(!isDisabledForB2CConnector()) AccountConsent_SVE.createB2CCustomInputForRetail(newItems, oldItems);
+        TNP_001_AccountTrigger_SVE.listAccountAfterUpdate(newItems.values(),(Map<Id, Account>)oldItems);
         System.debug('**** TRIGGER CONTEXT : END AFTER UPDATE ****');
     }
 
