--- a/unpackaged/main/default/classes/SOM_CreditMemoDocumentController.cls
+++ b/unpackaged/main/default/classes/SOM_CreditMemoDocumentController.cls
@@ -3,7 +3,7 @@ global with sharing class SOM_CreditMemoDocumentController {
     public static final String   CONCAT_CHARACTER = ',';
     public Map<String, String>   creditMemoConfigs { get; set; }
     public CreditMemoDocument    creditMemoDocument { get; set;}
-    public Map<Decimal,Decimal> creditMemoTaxLineItems {get; set; }
+    public Map<Decimal,String> creditMemoTaxLineItems {get; set; }
     public Map<String,String>    countryMap {get; set;}
     public String                quantityColumnName {get; set;}
     public String                SerialNumberColumnName {get; set;}
@@ -41,6 +41,7 @@ global with sharing class SOM_CreditMemoDocumentController {
                                        (SELECT ID, Type, RelatedLineId, ReferenceEntityItemTypeCode, Product2.Description, AdjustmentAmountWithTax, AdjustmentAmount, AdjustmentTaxAmount, ChargeTaxAmount, ChargeAmount, ChargeAmountWithTax, ReturnOrderLineItem__c, ReturnOrderLineItem__r.QuantityReturned, ReturnOrderLineItem__r.SerialNumber__c,  
                                         TYPEOF ReferenceEntityItem WHEN OrderItemSummary THEN TaxRate__c, hsCode__c, hsCodeDescription__c, COO__c, Description, LineNumber END FROM CreditMemoLines ) FROM CreditMemo WHERE Id = :creditMemoId];
         if (creditMemo != null && !creditMemo.isEmpty()) {
+            //this.AmountsFormat  = setAmountsFormat(creditMemo.get(0).BillingCountry);
             if (creditMemo.get(0).ReferenceEntity instanceOf OrderSummary) {
                 OrderSummary ordSummary = (OrderSummary) creditMemo.get(0).ReferenceEntity;
                 creditMemoDoc.orderNumber  = ordSummary.OrderNumber;
@@ -53,7 +54,6 @@ global with sharing class SOM_CreditMemoDocumentController {
                 billingContact.zipCode     = ordSummary.BillingPostalCode;
                 billingContact.state       = ordSummary.BillingState;
                 this.AmountsFormat  = setAmountsFormat(ordSummary.BillingCountry);
-                System.debug('billContact.country' + AmountsFormat);
                 //set billing contact
                 creditMemoDoc.billingContact = billingContact;
                 creditMemoDoc.paymentType = this.getPaymentMethod(ordSummary.Id);
@@ -75,8 +75,8 @@ global with sharing class SOM_CreditMemoDocumentController {
             creditMemoDoc.deliveryContact  = deliveryContact;
             creditMemoDoc.creditMemoNumber = creditMemo.get(0).CreditMemoNumber;
             creditMemoDoc.creditMemoDate   = DateTime.newInstance(creditMemo.get(0).Credit_Memo_Date__c.year(), creditMemo.get(0).Credit_Memo_Date__c.month(), creditMemo.get(0).Credit_Memo_Date__c.day()).format('dd.MM.yyyy');
-            creditMemoDoc.netSubTotal      = (creditMemo.get(0).TotalAmount);
-            creditMemoDoc.totalWithTax     = (creditMemo.get(0).TotalAmountWithTax);
+            creditMemoDoc.netSubTotal      = getTotalFormatted(creditMemo.get(0).TotalAmount,AmountsFormat);
+            creditMemoDoc.totalWithTax     = getTotalFormatted(creditMemo.get(0).TotalAmountWithTax,AmountsFormat);
             //product type
             String creditMemoProductType = getCreditMemoProductType(creditMemo.get(0));
             //create credit memo lines
@@ -90,20 +90,20 @@ global with sharing class SOM_CreditMemoDocumentController {
                         //Only if attached to a returnLineItem, divide by returnedQuantity 
                         if (creditMemoLine.ReturnOrderLineItem__c != null && creditMemoLine.ReturnOrderLineItem__r.QuantityReturned > 0) {
                             lineItem.quantity     = creditMemoLine.ReturnOrderLineItem__r.QuantityReturned;
-                            lineItem.netAmount    = (getAmount(creditMemoLine)/creditMemoLine.ReturnOrderLineItem__r.QuantityReturned);
-                            lineItem.vat          = (getVAT(creditMemoLine)/creditMemoLine.ReturnOrderLineItem__r.QuantityReturned);
-                            lineItem.grossAmount  = (getAmountWithTax(creditMemoLine)/creditMemoLine.ReturnOrderLineItem__r.QuantityReturned);
-                            lineItem.total        = (getAmountWithTax(creditMemoLine)); 
+                            lineItem.netAmount    = getTotalFormatted(getAmount(creditMemoLine)/creditMemoLine.ReturnOrderLineItem__r.QuantityReturned,AmountsFormat);
+                            lineItem.vat          = getTotalFormatted(getVAT(creditMemoLine)/creditMemoLine.ReturnOrderLineItem__r.QuantityReturned,AmountsFormat);
+                            lineItem.grossAmount  = getTotalFormatted(getAmountWithTax(creditMemoLine)/creditMemoLine.ReturnOrderLineItem__r.QuantityReturned,AmountsFormat);
+                            lineItem.total        = getTotalFormatted(getAmountWithTax(creditMemoLine),AmountsFormat); 
                             lineItem.serialNumber = creditMemoLine.ReturnOrderLineItem__r.SerialNumber__c;
                             this.quantityColumnName     = 'QUANTITY';
                             this.SerialNumberColumnName = 'SERIAL NO.';
                         } 
                         else {
                             //we should use adjustment
-                            lineItem.netAmount   = (getAmount(creditMemoLine));
-                            lineItem.vat         = (getVAT(creditMemoLine));
-                            lineItem.grossAmount = (getAmountWithTax(creditMemoLine));
-                            lineItem.total       = (getAmountWithTax(creditMemoLine));
+                            lineItem.netAmount   = getTotalFormatted(getAmount(creditMemoLine),AmountsFormat);
+                            lineItem.vat         = getTotalFormatted(getVAT(creditMemoLine),AmountsFormat);
+                            lineItem.grossAmount = getTotalFormatted(getAmountWithTax(creditMemoLine),AmountsFormat);
+                            lineItem.total       = getTotalFormatted(getAmountWithTax(creditMemoLine),AmountsFormat);
                         }
                         if (creditMemoLine.Type.equalsIgnoreCase(SOM_Constants.CreditMemo_LINE_TYPE_ADJUSTMENT)) {
                             for(CreditMemoLine creditMemoLineCharge:creditMemo.get(0).CreditMemoLines) {
@@ -152,7 +152,7 @@ global with sharing class SOM_CreditMemoDocumentController {
             //set credit memo line items
             //lineItems.sort();
             creditMemoDoc.lineItems = lineItems;
-            this.creditMemoTaxLineItems = new Map<Decimal, Decimal>();
+            this.creditMemoTaxLineItems = new Map<Decimal, String>();
             //set credit memo line taxes
             this.creditMemoTaxLineItems = getCreditMemoTaxLineItems(creditMemo.get(0), creditMemoProductType);
             this.creditMemoDocument     = creditMemoDoc;
@@ -192,9 +192,9 @@ global with sharing class SOM_CreditMemoDocumentController {
         return creditMemoLine.ChargeAmountWithTax;
     }
     
-    public Map<Decimal,Decimal> getCreditMemoTaxLineItems(CreditMemo creditMemo, String creditMemoProductType){
+    public Map<Decimal,String> getCreditMemoTaxLineItems(CreditMemo creditMemo, String creditMemoProductType){
         Map<Decimal, Decimal> creditMemoTaxes       = new Map<Decimal, Decimal>();
-        Map<Decimal, Decimal> creditMemoTaxesSorted = new Map<Decimal, Decimal>();
+        Map<Decimal, String> creditMemoTaxesSorted = new Map<Decimal, String>();
         for (CreditMemoLine lineItem:creditMemo.CreditMemoLines) {
             if (lineItem.Type.equalsIgnoreCase(creditMemoProductType) || ( creditMemo.ReturnOrder__r.Tech_ShippingFeeRefund__c == true && lineItem.Type == SOM_Constants.CreditMemo_LINE_TYPE_ADJUSTMENT)) {
                 Decimal taxRate = 0;
@@ -224,7 +224,7 @@ global with sharing class SOM_CreditMemoDocumentController {
         sortedTaxes.addAll(creditMemoTaxes.keySet());
         sortedTaxes.sort();
         for(Decimal taxRate: sortedTaxes){
-            creditMemoTaxesSorted.put((taxRate),(creditMemoTaxes.get(taxRate)));
+            creditMemoTaxesSorted.put((taxRate),getTotalFormatted(creditMemoTaxes.get(taxRate),AmountsFormat));
         }
         return creditMemoTaxesSorted;
     }
@@ -251,6 +251,49 @@ global with sharing class SOM_CreditMemoDocumentController {
                 return AmountsFormat.AmountsFormat__c;
     }
     
+    //Apply the AmountsFormat
+    public String getTotalFormatted(Decimal taxTotal, String AmountsFormat ){
+        	String decimalSep = AmountsFormat.substring(7, 8);
+        	Decimal input = taxTotal;
+        	if (taxTotal == null && (decimalSep =='.')) return '0.00';
+        	if (taxTotal == null && (decimalSep ==',')) return '0,00';
+        	if (taxTotal.scale() > 2) {
+        		input = taxTotal.setScale(2, RoundingMode.HALF_UP);
+            }
+           	return formatDecimalNumber(getCents(input),decimalSep);
+    }
+    
+    //Apply the AmountsFormat
+    public String formatDecimalNumber(String price, String decimalSep){
+        String FinalExp,test;
+        if(decimalSep =='.'){
+            FinalExp = price.replace(' ', ',').replace('.', ',');
+            FinalExp = FinalExp.reverse().replaceFirst(',', '.').reverse();
+        }else if (decimalSep ==','){
+            FinalExp = price.replace(' ', '.').replace(',', '.');
+            FinalExp = FinalExp.reverse();
+            FinalExp = (FinalExp.substring(0,2)+','+FinalExp.substring(3,(FinalExp).length())).reverse();
+        }
+        return FinalExp;
+    }
+    
+    //Convert a number into a formatted string
+    public String getCents(Decimal x){
+        Decimal dec = x;
+        String amount;
+        if (!string.valueof(dec.format()).right(3).contains('.') && !string.valueof(dec.format()).right(3).contains(',') ){
+            amount = string.valueof(dec.format()) + '.00';
+        }else if (string.valueof(dec.format()).right(2).contains('.')){
+            amount = string.valueof(dec.format()) + '0';
+        }else if (string.valueof(dec.format()).right(2).contains(',')){
+            amount = string.valueof(dec.format()) + '0';
+        }else {
+            amount = string.valueof(dec.format());
+        }
+        return amount;
+        
+    }
+    
     global with sharing class CreditMemoDocument{
         public String                   creditMemoNumber {get; set;}
         public String                   invoiceNumber {get; set;}
@@ -260,8 +303,8 @@ global with sharing class SOM_CreditMemoDocumentController {
         public CreditMemoContact        billingContact {get; set;}
         public CreditMemoContact        deliveryContact {get; set;}
         public List<CreditMemoLineItem> lineItems {get; set;}
-        public Decimal                   netSubTotal {get; set;}
-        public Decimal                   totalWithTax {get; set;}
+        public String                   netSubTotal {get; set;}
+        public String                   totalWithTax {get; set;}
         public String                   paymentType {get; set;}
     }
     
@@ -283,10 +326,10 @@ global with sharing class SOM_CreditMemoDocumentController {
         public String  hsCodeDescription {get; set;}
         public String  coo {get; set;}
         public Decimal quantity {get; set;} 
-        public Decimal  netAmount {get; set;} 
-        public Decimal  vat {get; set;} 
-        public Decimal  grossAmount {get; set;}
-        public Decimal  total {get; set;} 
+        public String  netAmount {get; set;} 
+        public String  vat {get; set;} 
+        public String  grossAmount {get; set;}
+        public String  total {get; set;} 
         //add number LineNumber
         public Integer  lineNumber {get; set;} 
 
