--- a/unpackaged/main/default/classes/SOM_Constants.cls
+++ b/unpackaged/main/default/classes/SOM_Constants.cls
@@ -139,5 +139,8 @@ global with sharing class SOM_Constants {
     
     public static final String ECOMMERCE_PAYMENT_CAPTURE_ERRORS = 'E_Commerce_Payment_Capture_Errors_';
     
+    public static final String AMOUNT_FORMAT1 = '###.##0,00';
+    public static final String AMOUNT_FORMAT2 = '###,##0.00';
+    
     public static final String TABULAR_REPORT_FACT_MAP_KEY = 'T!T';
 }
